--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+   touch-action: manipulation;
 }
 
 a {
@@ -1348,8 +1349,8 @@ section {
 
 .team .member .pic {
   overflow: hidden;
-  width: 180px;
-  border-radius: 50%;
+  width: 150px;
+  border-radius: 100%;
 }
 
 .team .member .pic img {
