--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1061,6 +1061,8 @@ section {
   margin: 0 0 25px 0;
   transition: all ease-in-out 0.4s;
   background: #fff;
+  border-radius: 8%;
+
 }
 
 .services .icon-box .icon {
