--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1096,6 +1096,7 @@ section {
   font-size: 19px;
   text-decoration: none;
 	text-align: center;
+  height: 21px;
 }
 
 .services .icon-box h4 a {
