--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1861,7 +1861,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Breadcrumbs
+# Breadcrumbs margin-top: 68px;
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
@@ -1875,7 +1875,7 @@ section {
 
 @media (max-width: 992px) {
   .breadcrumbs {
-    margin-top: 68px;
+    margin-top: 60px;
   }
 }
 
